# kosmos-cp1

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README  README.md  TODO  TODO.md  build.gradle  build.properties  build.xml  build_win_release.bat  cp1.asm  cp1.sym  disassembly.txt  ivy.xml  make_icons.sh  repositories.gradle  rom.asm  set_version.bat.in
.github/workflows/: build-linux.yml  build-mac.yml  build-win.yml  release.yml
buildSrc/src/main/groovy/: GenerateBuildInfoTask.groovy
config/: build.properties  ivysettings.xml
docs/: random-notes.md
gradle/wrapper/: gradle-wrapper.properties
installer/win/: KosmosCP1.nsi  installer.nsi
lib/org.eclipse/platform-minimal/4.6.1/ivys/: ivy.xml  ivy.xml.md5  ivy.xml.sha1
lib/org.eclipse/platform-minimal/4.6.1/jars/: org.eclipse.core.commands_3.8.0.v20160316-1921.jar.md5  org.eclipse.core.commands_3.8.0.v20160316-1921.jar.sha1  org.eclipse.core.contenttype_3.5.100.v20160418-1621.jar.md5  org.eclipse.core.contenttype_3.5.100.v20160418-1621.jar.sha1  org.eclipse.core.databinding.beans_1.3.100.v20160509-1025.jar.md5  org.eclipse.core.databinding.beans_1.3.100.v20160509-1025.jar.sha1  org.eclipse.core.databinding.observable_1.6.0.v20160511-1747.jar.md5  org.eclipse.core.databinding.observable_1.6.0.v20160511-1747.jar.sha1  org.eclipse.core.databinding.property_1.6.0.v20160427-0852.jar.md5  org.eclipse.core.databinding.property_1.6.0.v20160427-0852.jar.sha1  org.eclipse.core.databinding_1.6.0.v20160412-0910.jar.md5  org.eclipse.core.databinding_1.6.0.v20160412-0910.jar.sha1  org.eclipse.core.expressions_3.5.100.v20160418-1621.jar.md5  org.eclipse.core.expressions_3.5.100.v20160418-1621.jar.sha1  org.eclipse.core.externaltools_1.0.400.v20160509-1057.jar.md5  org.eclipse.core.externaltools_1.0.400.v20160509-1057.jar.sha1  org.eclipse.core.filebuffers_3.6.0.v20160503-1849.jar.md5  org.eclipse.core.filebuffers_3.6.0.v20160503-1849.jar.sha1  org.eclipse.core.filesystem.linux.x86_1.4.200.v20140124-1940.jar.md5  org.eclipse.core.filesystem.linux.x86_1.4.200.v20140124-1940.jar.sha1  org.eclipse.core.filesystem.linux.x86_64_1.2.200.v20140124-1940.jar.md5  org.eclipse.core.filesystem.linux.x86_64_1.2.200.v20140124-1940.jar.sha1  org.eclipse.core.filesystem.win32.x86_1.4.0.v20140124-1940.jar.md5  org.eclipse.core.filesystem.win32.x86_1.4.0.v20140124-1940.jar.sha1  org.eclipse.core.filesystem.win32.x86_64_1.4.0.v20140124-1940.jar.md5  org.eclipse.core.filesystem.win32.x86_64_1.4.0.v20140124-1940.jar.sha1  org.eclipse.core.filesystem_1.6.0.v20160503-1608.jar.md5  org.eclipse.core.filesystem_1.6.0.v20160503-1608.jar.sha1  org.eclipse.core.jobs_3.8.0.v20160509-0411.jar.md5  org.eclipse.core.jobs_3.8.0.v20160509-0411.jar.sha1  org.eclipse.core.net.linux.x86_1.2.0.v20160323-1650.jar.md5  org.eclipse.core.net.linux.x86_1.2.0.v20160323-1650.jar.sha1  org.eclipse.core.net.linux.x86_64_1.2.0.v20160323-1650.jar.md5  org.eclipse.core.net.linux.x86_64_1.2.0.v20160323-1650.jar.sha1  org.eclipse.core.net.win32.x86_1.1.0.v20160323-1650.jar.md5  org.eclipse.core.net.win32.x86_1.1.0.v20160323-1650.jar.sha1  (+30 more)
resources/: resources.qrc  resources.rc
resources/listings/: listing12.asm  listing17.asm  listing26.asm  listing28.asm  listing4.asm  listing6.asm  listing_001.asm  listing_002.asm  listing_003.asm  listing_005.asm  listing_007.asm  listing_008.asm  listing_009.asm  listing_010.asm  listing_011.asm  listing_016.asm  listing_018.asm  listing_020.asm  listing_021.asm  listing_022.asm  listing_023.asm  listing_024.asm  listing_025.asm  listing_027.asm  listing_030.asm  listing_031.asm  listing_032.asm  listing_033.asm  listing_034.asm  listing_035.asm  listing_054.asm  listing_055.asm  listing_090.asm  listing_091.asm  listing_092.asm  listing_093.asm  listing_100.asm
resources/ui/: icon.icns
src/: assembler.cpp  assembler.h  config.h.in  executionthread.cpp  executionthread.h  executorthread.cpp  executorthread.h  main.cpp  performancemeasurer.cpp  performancemeasurer.h  throttler.cpp  throttler.h
src/emulation/: dataport.cpp  dataport.h  intel8049.cpp  intel8049.h  intel8155.cpp  intel8155.h  ram.cpp  ram.h
src/installer/deb/: KosmosCP1.desktop  kosmos-cp1
src/installer/deb/debian/: changelog  control  copyright  kosmos-cp1.install
src/installer/win/: KosmosCP1.nsi  l4j_32.xml  l4j_64.xml
src/main/resources/: logging.properties
src/ui/: aboutdialog.cpp  aboutdialog.h  basewindow.cpp  basewindow.h  checkboxaction.cpp  checkboxaction.h  cp1button.cpp  cp1button.h  cp1colors.cpp  cp1colors.h  cp1display.cpp  cp1display.h  cp1keyboard.cpp  cp1keyboard.h  cp1panelwidget.cpp  cp1panelwidget.h  cp1sevensegmentwidget.cpp  cp1sevensegmentwidget.h  cp5leds.cpp  cp5leds.h  cp5panelwidget.cpp  cp5panelwidget.h  cp5switch.cpp  cp5switch.h  cp5switches.cpp  cp5switches.h  cpuwindow.cpp  cpuwindow.h  i8049disassemblywidget.cpp  i8049disassemblywidget.h  i8049statuswidget.cpp  i8049statuswidget.h  i8155statuswidget.cpp  i8155statuswidget.h  memorywidget.cpp  memorywidget.h  panelwindow.cpp  panelwindow.h  resources.cpp  resources.h  (+2 more)
src/ui/assembler/: assemblerwindow.cpp  assemblerwindow.h
src/ui/cpu/: checkboxaction.cpp  checkboxaction.h  cpuwindow.cpp  cpuwindow.h  i8049disassemblywidget.cpp  i8049disassemblywidget.h  i8049statuswidget.cpp  i8049statuswidget.h  i8155statuswidget.cpp  i8155statuswidget.h  memorywidget.cpp  memorywidget.h
src/ui/panel/: cp1button.cpp  cp1button.h  cp1colors.cpp  cp1colors.h  cp1display.cpp  cp1display.h  cp1keyboard.cpp  cp1keyboard.h  cp1panelwidget.cpp  cp1panelwidget.h  cp1sevensegmentwidget.cpp  cp1sevensegmentwidget.h  cp5leds.cpp  cp5leds.h  cp5panelwidget.cpp  cp5panelwidget.h  cp5switch.cpp  cp5switch.h  cp5switches.cpp  cp5switches.h  panelwindow.cpp  panelwindow.h
src/util/: disassembler.cpp  disassembler.h
test/: assembler_test.cpp  dataport_test.cpp
tools/generator/: buttons.cpp  buttons.h  colors.cpp  colors.h  leds.cpp  leds.h  main.cpp  save.cpp  save.h  seven_segment.cpp  seven_segment.h  switches.cpp  switches.h
tools/generator/resources/: resources.qrc
(+249 files in other folders)
